plugins {
    id 'java'
}

group 'com.mechanitis'
version '1.0-SNAPSHOT'

sourceCompatibility = 14

repositories {
    mavenCentral()
}

dependencies {
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-api:5.6.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    jvmArgs '--enable-preview'
    useJUnitPlatform()
}